--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,8 +9,8 @@
     {% if user %}
         <p>user information</p>
         <ul>
-            <li>Name : {{ user[1] }}</li>
-            <li>Email : {{ user[2] }}</li>
+            <li>Name : {{ user.name }}</li>
+            <li>Email : {{ user.email }}</li>
         </ul>
         <a href="/logout" class="btn btn-dark">Logout</a>
     {% endif %}
