add-showing password feature

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,6 +11,7 @@
         <ul>
             <li>Name : {{ user.name }}</li>
             <li>Email : {{ user.email }}</li>
+            <li>Pass: {{user.Pass}}</li>
         </ul>
         <a href="/logout" class="btn btn-dark">Logout</a>
     {% endif %}
